# ganpati-scribe

./: README.md  pyproject.toml
meeting_scribe/: cli.py  diarize.py  merge.py  transcribe.py  translate.py
